[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/game_results.gd" type="Script" id=1]
[ext_resource path="res://theme-default.tres" type="Theme" id=2]
[ext_resource path="res://art-built/9patch/background-title.png" type="Texture2D" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://art-built/button-back.png" type="Texture2D" id=5]
[ext_resource path="res://fonts/Amaranth-Regular-60.tres" type="FontFile" id=6]
[ext_resource path="res://components/game_history.tscn" type="PackedScene" id=7]

[node name="root" type="Node"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="bg" type="Sprite2D" parent="ui"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 4 )

[node name="back_button" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.0
offset_top = -166.0
offset_right = 195.0
offset_bottom = -50.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="detail_text" type="RichTextLabel" parent="ui"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.0
offset_top = 150.0
offset_right = 217.0
offset_bottom = 219.0
bbcode_enabled = true
text = "[center]Congratulations![/center]"
text = "Congratulations!"
scroll_active = false

[node name="title_label" type="Label" parent="ui"]
anchor_right = 1.0
offset_top = 68.0
offset_bottom = 142.0
theme_override_fonts/font = ExtResource( 6 )
text = "Game Over"
align = 1

[node name="game_history" parent="ui" instance=ExtResource( 7 )]
offset_top = 240.0
offset_bottom = 740.0

